--- a/scss/blocks/_search-form.scss
+++ b/scss/blocks/_search-form.scss
@@ -1,5 +1,6 @@
 .search-form {
   display: flex;
+  gap: 10px;
   width: 344px;
   padding: 8px 8px 8px 20px;
   height: 56px;
@@ -16,6 +17,7 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 150%;
+  flex-grow: 1;
   &::placeholder {
     color: #fff;
   }
@@ -23,6 +25,7 @@
 .search-form__button {
   width: 40px;
   height: 40px;
+  flex-shrink:0;
   border-radius: 24px;
   background-color: var(--accent);
 }
