--- a/scss/main.css
+++ b/scss/main.css
@@ -254,6 +254,7 @@ body {
 
 .search-form {
   display: flex;
+  gap: 10px;
   width: 344px;
   padding: 8px 8px 8px 20px;
   height: 56px;
@@ -271,6 +272,7 @@ body {
   font-size: 18px;
   font-weight: 400;
   line-height: 150%;
+  flex-grow: 1;
 }
 .search-form__input::-moz-placeholder {
   color: #fff;
@@ -282,6 +284,7 @@ body {
 .search-form__button {
   width: 40px;
   height: 40px;
+  flex-shrink: 0;
   border-radius: 24px;
   background-color: var(--accent);
 }
