--- a/scss/main.css
+++ b/scss/main.css
@@ -232,6 +232,44 @@ body {
   font-size: 18px;
 }
 
+.nav-list__item {
+  position: relative;
+}
+
+.nav-list__link {
+  transition: opacity 0.1s ease;
+}
+.nav-list__link:hover {
+  opacity: 0.8;
+}
+.nav-list__link--dropdown {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.nav-list__link--dropdown::after {
+  content: url("./../icons/arrow-down.svg");
+  width: 18px;
+  height: 18px;
+}
+
+.nav-list__sub-nav {
+  opacity: 0;
+  pointer-events: none;
+  position: absolute;
+  width: 160px;
+  left: 0%;
+  top: 100%;
+  transition: all 0.4s ease-out;
+  transform: translate(0%, 50%);
+}
+
+.nav-list__item:hover .nav-list__sub-nav {
+  pointer-events: all;
+  transform: translate(0%, 0%);
+  opacity: 1;
+}
+
 .cart {
   position: relative;
   align-self: center;
@@ -669,4 +707,21 @@ body {
   letter-spacing: 0.28px;
   text-transform: capitalize;
   color: #fff !important;
+}
+
+.sub-nav {
+  padding: 15px 25px;
+  display: grid;
+  gap: 16px;
+  border-radius: 16px;
+  background-color: var(--footer-bg);
+  color: #fff;
+  font-size: 14px;
+}
+.sub-nav a {
+  transition: color 0.1s ease-in;
+  color: #fff;
+}
+.sub-nav a:hover {
+  color: var(--accent);
 }/*# sourceMappingURL=main.css.map */
