Add mobile navigation html and scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,4 +20,5 @@
 @import "./blocks/slider";
 @import "./blocks/footer";
 @import "./blocks/logo";
-@import './blocks/sub-nav';
+@import "./blocks/sub-nav";
+@import "./blocks/mobile-nav";
