--- a/scss/blocks/_nav-list.scss
+++ b/scss/blocks/_nav-list.scss
@@ -9,6 +9,10 @@
 
   font-weight: 500;
   font-size: 18px;
+
+  @include tablet() {
+    display:none
+  }
 }
 .nav-list__item {
   position: relative;
@@ -37,7 +41,7 @@
   position: absolute;
   width: 160px;
   left: 0%;
-  top:100%;
+  top: 100%;
   transition: all 0.4s ease-out;
   transform: translate(0%, 50%);
 }
