--- a/scss/main.css
+++ b/scss/main.css
@@ -221,6 +221,15 @@ body {
   align-self: center;
 }
 
+.nav__button {
+  display: none;
+}
+@media (max-width: 992px) {
+  .nav__button {
+    display: block;
+  }
+}
+
 .nav-list {
   display: flex;
   gap: 64px;
@@ -230,6 +239,11 @@ body {
   justify-self: center;
   font-weight: 500;
   font-size: 18px;
+}
+@media (max-width: 992px) {
+  .nav-list {
+    display: none;
+  }
 }
 
 .nav-list__item {
@@ -724,4 +738,52 @@ body {
 }
 .sub-nav a:hover {
   color: var(--accent);
+}
+
+.mobile-nav-wrapper {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 320px;
+  padding: 30px 30px;
+  color: var(--footer-text-color);
+  background-color: var(--footer-bg);
+  display: none;
+}
+.mobile-nav-wrapper--open {
+  display: block;
+}
+
+.mobile-nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  margin-bottom: 20px;
+}
+
+.mobile-cart {
+  display: flex;
+  gap: 20px;
+  flex-grow: 1;
+  padding-right: 20px;
+  align-items: center;
+  border-right: 1px solid rgba(255, 255, 255, 0.2);
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.mobile-nav {
+  display: grid;
+  gap: 20px;
+  font-size: 22px;
+}
+
+.mobile-sub-nav {
+  display: grid;
+  gap: 14px;
+  padding: 20px 0 0 20px;
 }/*# sourceMappingURL=main.css.map */
