Add mobile navigation

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,4 +1,6 @@
 .header {
+  position: relative;
+  padding: 10px;
   background-color: var(--footer-bg);
   background-image: url("./../img/header/header-bg.jpg");
   background-size: cover;
