--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -4,9 +4,9 @@
   --text-card-dark-blue: #0d1b39;
   --accent: #e58411;
 
-  --footer-accent:#f6973f;
-  --footer-bg:#2d2f33;
-  
+  --footer-accent: #f6973f;
+  --footer-bg: #2d2f33;
+
   --header-text-color: #ffffff;
   --footer-text-color: #ffffff;
 
@@ -15,20 +15,25 @@
   --ui-turquoise: #00d6c9;
   --ui-dark-blue: #0d1b39;
 
-  --font-main: 'Gilroy', sans-serif;
-  --font-cards: 'Inter', sans-serif;
-  --font-footer-accent: 'DM Sans' sans-serif;
+  --font-main: "Gilroy", sans-serif;
+  --font-cards: "Inter", sans-serif;
+  --font-footer-accent: "DM Sans" sans-serif;
 }
 
-
-@mixin retina-bg($image){
-    @media (-webkit-min-device-pixel-ratio:2),(min-resolution:192dpi){
-        background-image: url($image);
-    }
+@mixin retina-bg($image) {
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    background-image: url($image);
+  }
 }
 
-@mixin tablet(){
-  @media (max-width:992px){
-    @content
+@mixin tablet() {
+  @media (max-width: 992px) {
+    @content;
+  }
+}
+
+@mixin mobile-xl() {
+  @media (max-width: 819px) {
+    @content;
   }
 }
