--- a/scss/blocks/_logo.scss
+++ b/scss/blocks/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  font-size: 28px;
+  font-size: clamp(18px, 0.95rem + 0.9vw, 28px);
   font-weight: 700;
   letter-spacing: 0.28px;
   text-transform: capitalize;
