--- a/scss/base/_vars.scss
+++ b/scss/base/_vars.scss
@@ -26,6 +26,12 @@
   }
 }
 
+@mixin desktop-small() {
+  @media (max-width: 1400px) {
+    @content;
+  }
+}
+
 @mixin tablet() {
   @media (max-width: 992px) {
     @content;
@@ -37,7 +43,7 @@
     @content;
   }
 }
-@mixin mobile(){
+@mixin mobile() {
   @media (max-width: 629px) {
     @content;
   }
