--- a/scss/blocks/_footer.scss
+++ b/scss/blocks/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   background-color: var(--footer-bg);
   color: var(--footer-text-color);
-  padding: 118px 0 56px;
+  padding: clamp(60px, 2rem + 8.6vw, 118px) 0 56px;
   a {
     color: var(--footer-text-color);
     transition: opacity 0.3s ease;
@@ -15,7 +15,14 @@
   display: grid;
   grid-template-columns: 3fr 1fr 2fr 2fr 2fr;
   margin-bottom: 118px;
-  gap: 20px;
+  gap: 60px 20px;
+
+  @include tablet() {
+    grid-template-columns: 4fr 1fr 3fr 3fr;
+  }
+  @include mobile() {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 .footer__logo {
   margin-bottom: 29px;
@@ -25,6 +32,10 @@
   font-size: 15px;
   line-height: 1.6;
 
+  @include mobile() {
+    grid-column: 1/3;
+  }
+
   p + p {
     margin-top: 1em;
   }
@@ -33,6 +44,9 @@
 .footer__nav {
   &--services {
     grid-column-start: 3;
+    @include mobile() {
+      grid-column-start: auto;
+    }
   }
 }
 
@@ -54,6 +68,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @include mobile() {
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    gap: 20px;
+  }
 }
 
 .footer__copyright {
@@ -61,7 +80,12 @@
   font-size: 15px;
   letter-spacing: -0.205px;
 }
+
 .footer__links {
   display: flex;
+  flex-wrap: wrap;
   gap: 40px;
+  @include mobile() {
+    gap: 20px;
+  }
 }
