--- a/scss/blocks/_products.scss
+++ b/scss/blocks/_products.scss
@@ -1,6 +1,9 @@
 .products {
   padding: 50px;
   background-color: #f7f7f7;
+  @include mobile(){
+    padding: 40px 20px;
+  }
 }
 .products__title {
   margin-bottom: 32px;
@@ -9,6 +12,7 @@
   font-size: 42px;
 }
 .products__tabs {
+  width: 100%;
   text-align: center;
   margin-bottom: 80px;
 }
