--- a/scss/blocks/_tab-controls.scss
+++ b/scss/blocks/_tab-controls.scss
@@ -13,7 +13,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  flex-shrink: 1;
   border-radius: 32px;
 
   color: rgba(31, 31, 31, 0.8);
@@ -22,7 +22,9 @@
   line-height: 1.85;
 
   transition: background-color 0.2s ease-in;
-
+  @include mobile(){
+    padding: 7px 10px;
+  }
   &:hover {
     background-color: rgba(255, 255, 255, 0.5);
   }
