--- a/scss/main.css
+++ b/scss/main.css
@@ -480,6 +480,11 @@ body {
   padding: 50px;
   background-color: #f7f7f7;
 }
+@media (max-width: 629px) {
+  .products {
+    padding: 40px 20px;
+  }
+}
 
 .products__title {
   margin-bottom: 32px;
@@ -489,6 +494,7 @@ body {
 }
 
 .products__tabs {
+  width: 100%;
   text-align: center;
   margin-bottom: 80px;
 }
@@ -542,12 +548,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 1;
   border-radius: 32px;
   color: rgba(31, 31, 31, 0.8);
   font-weight: 500;
   font-size: 18px;
   line-height: 1.85;
   transition: background-color 0.2s ease-in;
+}
+@media (max-width: 629px) {
+  .tab-controls__btn {
+    padding: 7px 10px;
+  }
 }
 .tab-controls__btn:hover {
   background-color: rgba(255, 255, 255, 0.5);
@@ -684,7 +696,7 @@ body {
 .footer {
   background-color: var(--footer-bg);
   color: var(--footer-text-color);
-  padding: 118px 0 56px;
+  padding: clamp(60px, 2rem + 8.6vw, 118px) 0 56px;
 }
 .footer a {
   color: var(--footer-text-color);
@@ -698,7 +710,17 @@ body {
   display: grid;
   grid-template-columns: 3fr 1fr 2fr 2fr 2fr;
   margin-bottom: 118px;
-  gap: 20px;
+  gap: 60px 20px;
+}
+@media (max-width: 992px) {
+  .footer-grid {
+    grid-template-columns: 4fr 1fr 3fr 3fr;
+  }
+}
+@media (max-width: 629px) {
+  .footer-grid {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 .footer__logo {
@@ -710,12 +732,22 @@ body {
   font-size: 15px;
   line-height: 1.6;
 }
+@media (max-width: 629px) {
+  .footer__desc {
+    grid-column: 1/3;
+  }
+}
 .footer__desc p + p {
   margin-top: 1em;
 }
 
 .footer__nav--services {
   grid-column-start: 3;
+}
+@media (max-width: 629px) {
+  .footer__nav--services {
+    grid-column-start: auto;
+  }
 }
 
 .footer__nav-title {
@@ -738,6 +770,13 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 629px) {
+  .footer_row {
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    gap: 20px;
+  }
+}
 
 .footer__copyright {
   font-family: var(--font-footer-accent);
@@ -747,7 +786,13 @@ body {
 
 .footer__links {
   display: flex;
+  flex-wrap: wrap;
   gap: 40px;
+}
+@media (max-width: 629px) {
+  .footer__links {
+    gap: 20px;
+  }
 }
 
 .logo {
